<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_launcher_name">File Manager</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="go_to_home_folder">Go to home folder</string>
    <string name="toggle_termux_storage">Switch storage</string>
    <string name="switch_to_termux">Switch to Termux</string>
    <string name="switch_to_internal_storage">Switch to internal storage</string>
    <string name="show_termux_system_dirs">Show phone system dirs</string>
    <string name="hide_termux_system_dirs">Hide phone system dirs</string>
    <string name="termux_system_dirs">System dirs</string>
    <string name="open_in_terminal">Open in terminal</string>
    <string name="set_as_home_folder">Set as home folder</string>
    <string name="home_folder_updated">Home folder updated</string>
    <string name="copy_path">Copy path to clipboard</string>
    <string name="path_copied">Path copied</string>
    <string name="multi_select">Multi-select</string>
    <string name="select_audio_file">Please select an audio file</string>
    <string name="search_folder">Search folder</string>
    <string name="rooted_device_only">This operation works only on rooted devices</string>
    <string name="recents">Recents</string>
    <string name="show_recents">Show recents</string>
    <string name="recent_file_size_unknown">Unknown size</string>
    <string name="recent_time_today">Today</string>
    <string name="recent_time_yesterday">Yesterday</string>
    <string name="recent_time_day_before_yesterday">2 days ago</string>
    <string name="recent_time_last_week">Last week</string>
    <string name="recent_time_last_month">Last month</string>
    <plurals name="recent_time_days_ago">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="recent_time_weeks_ago">
        <item quantity="one">%d week ago</item>
        <item quantity="other">%d weeks ago</item>
    </plurals>
    <plurals name="recent_time_months_ago">
        <item quantity="one">%d month ago</item>
        <item quantity="other">%d months ago</item>
    </plurals>
    <string name="invert_colors">Invert colors</string>

    <!-- Transfer progress -->
    <string name="transfer_download_title">下载中</string>
    <string name="transfer_apk_download_title">下载 APK</string>
    <string name="transfer_preparing">准备中...</string>
    <string name="transfer_running">正在下载...</string>
    <string name="transfer_cancel">取消</string>
    <string name="transfer_cancelling">正在取消...</string>
    <string name="transfer_current_file">当前文件</string>
    <string name="transfer_files_count">文件</string>
    <string name="transfer_size">大小</string>
    <string name="transfer_speed">速度</string>
    <string name="transfer_status">状态</string>
    <string name="transfer_failed">失败</string>
    <string name="transfer_unknown">未知</string>
    <string name="transfer_percent_unknown">--</string>
    <string name="transfer_badge_apk">APK</string>
    <string name="transfer_badge_file">文件</string>
    <string name="transfer_badge_folder">文件夹</string>
    <string name="transfer_done_success">下载完成</string>
    <string name="transfer_done_partial">部分完成</string>
    <string name="transfer_done_cancelled">下载已取消</string>
    <string name="transfer_done_failed">下载失败</string>

    <!-- Open as -->
    <string name="open_as">Open as</string>
    <string name="text_file">Text file</string>
    <string name="image_file">Image file</string>
    <string name="audio_file">Audio file</string>
    <string name="video_file">Video file</string>
    <string name="other_file">Other file</string>

    <!-- Compression -->
    <string name="compress">压缩</string>
    <string name="decompress">解压</string>
    <string name="compress_as">压缩为</string>
    <string name="compressing">正在压缩…</string>
    <string name="decompressing">正在解压…</string>
    <string name="compression_successful">压缩成功</string>
    <string name="decompression_successful">解压成功</string>
    <string name="compressing_failed">压缩失败</string>
    <string name="decompressing_failed">解压失败</string>

    <!-- Favorites -->
    <string name="manage_favorites">Manage favorites</string>
    <string name="go_to_favorite">Go to favorite</string>
    <string name="favorites_activity_placeholder">You can add frequently used folders to favorites for easy access from anywhere.</string>
    <string name="favorite_remark_hint">Favorite remark</string>
    <string name="favorite_remark_required">Remark is required</string>
    <string name="favorite_remark_message">The remark will be shown as the title above the path in Core Navigator.</string>

    <!-- File Editor -->
    <string name="file_editor">File Editor</string>
    <string name="industrial_self_test_title">Industrial self-test</string>
    <string name="industrial_self_test_failed_title">Industrial self-test finished with failures</string>
    <string name="industrial_self_test_running">Industrial self-test is already running</string>
    <string name="industrial_self_test_running_message">Running active checks against your saved servers. Please wait and keep the app alive.</string>
    <string name="industrial_self_test_report_copied">Self-test report copied</string>
    <string name="industrial_self_test_open_report_folder">Open report folder</string>
    <string name="manage_session_trust">Manage server fingerprint</string>
    <string name="run_ecj_project">Run ECJ project</string>

    <!-- Storage analysis -->
    <string name="storage_analysis">Storage analysis</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="audio">Audio</string>
    <string name="documents">Documents</string>
    <string name="downloads">Downloads</string>
    <string name="archives">Archives</string>
    <string name="others">Others</string>
    <string name="storage_free">free</string>
    <string name="total_storage">Total storage: %s</string>

    <!-- Settings -->
    <string name="enable_root_access">Enable root access</string>
    <string name="press_back_twice">Require pressing Back twice to leave the app</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="invalid_password">Invalid password</string>
    <string name="no_storage_permissions">No storage permissions</string>
    <!--
        Haven't found some strings? There's more at
        https://github.com/FossifyOrg/Commons/tree/master/commons/src/main/res
    -->
</resources>
